@@ -291,6 +291,9 @@ static const char* Copyright = "(C) Copyright Michigan State University 2008, Al
 /*
    Change Log
    $Log$
+   Revision 5.2.2.1  2006/06/22 17:11:23  ron-fox
+   Defect 209: Some other 64 bit uncleanliness that needed mopping up.
+
    Revision 5.2  2005/06/03 15:19:22  ron-fox
    Part of breaking off /merging branch to start 3.1 development
 
@@ -437,8 +440,8 @@ CBitSpectrumL::Increment(const CEvent& rE)
   CEvent& rEvent((CEvent&)rE);
   if(m_nParameter < rEvent.size()) {
     if(rEvent[m_nParameter].isValid()) {
-      ULong_t* p = (ULong_t*)getStorage();
-      assert(p != (ULong_t*)kpNULL);
+      UInt_t* p = (UInt_t*)getStorage();
+      assert(p != (UInt_t*)kpNULL);
       UInt_t nParam = 
 	(UInt_t)m_PDescription.RawToMapped(rEvent[m_nParameter]);
       
@@ -574,7 +577,7 @@ CBitSpectrumL::CreateStorage()
   setStorageType(keLong);
 
   Size_t        nBytes   = StorageNeeded();
-  ULong_t*      pStorage = new ULong_t[nBytes/sizeof(ULong_t)];
+  UInt_t*      pStorage = new UInt_t[nBytes/sizeof(UInt_t)];
 
   ReplaceStorage(pStorage);	// Storage now owned by parent.
   Clear();
